modified:   index.html

--- a/book/index.html
+++ b/book/index.html
@@ -52,33 +52,33 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
         <a title="Guestbook Start Page" href="index.html"><tt>[Start]</tt></a>
         <a title="Sign The Guestbook" href="0#sign"><tt>[Sign]</tt></a>
         <!--  -->
-            <a title="Entry 273 to 293" href="273#entries"><tt>[293-273]</tt></a>
+            <a title="Entry 273 to 293" href="show/273#entries"><tt>[293-273]</tt></a>
         <!-- -->
-            <a title="Entry 252 to 272" href="252#entries"><tt>[272-252]</tt></a>
+            <a title="Entry 252 to 272" href="show/252#entries"><tt>[272-252]</tt></a>
         <!-- -->
-            <a title="Entry 231 to 251" href="231#entries"><tt>[251-231]</tt></a>
+            <a title="Entry 231 to 251" href="show/231#entries"><tt>[251-231]</tt></a>
         <!-- -->
-            <a title="Entry 210 to 230" href="210#entries"><tt>[230-210]</tt></a>
+            <a title="Entry 210 to 230" href="show/210#entries"><tt>[230-210]</tt></a>
         <!-- -->
-            <a title="Entry 189 to 209" href="189#entries"><tt>[209-189]</tt></a>
+            <a title="Entry 189 to 209" href="show/189#entries"><tt>[209-189]</tt></a>
         <!-- -->
-            <a title="Entry 168 to 188" href="168#entries"><tt>[188-168]</tt></a>
+            <a title="Entry 168 to 188" href="show/168#entries"><tt>[188-168]</tt></a>
         <!-- -->
-            <a title="Entry 147 to 167" href="147#entries"><tt>[167-147]</tt></a>
+            <a title="Entry 147 to 167" href="show/147#entries"><tt>[167-147]</tt></a>
         <!-- -->
-            <a title="Entry 126 to 146" href="126#entries"><tt>[146-126]</tt></a>
+            <a title="Entry 126 to 146" href="show/126#entries"><tt>[146-126]</tt></a>
         <!-- -->
-            <a title="Entry 105 to 125" href="105#entries"><tt>[125-105]</tt></a>
+            <a title="Entry 105 to 125" href="show/105#entries"><tt>[125-105]</tt></a>
         <!-- -->
-            <a title="Entry 84 to 104" href="84#entries"><tt>[104-84]</tt></a>
+            <a title="Entry 84 to 104" href="show/84#entries"><tt>[104-84]</tt></a>
         <!-- -->
-            <a title="Entry 63 to 83" href="63#entries"><tt>[83-63]</tt></a>
+            <a title="Entry 63 to 83" href="show/63#entries"><tt>[83-63]</tt></a>
         <!-- -->
-            <a title="Entry 42 to 62" href="42#entries"><tt>[62-42]</tt></a>
+            <a title="Entry 42 to 62" href="show/42#entries"><tt>[62-42]</tt></a>
         <!-- -->
-            <a title="Entry 21 to 41" href="21#entries"><tt>[41-21]</tt></a>
+            <a title="Entry 21 to 41" href="show/21#entries"><tt>[41-21]</tt></a>
         <!-- -->
-            <a title="Entry 1 to 20" href="1#entries"><tt>[20-1]</tt></a>
+            <a title="Entry 1 to 20" href="show/1#entries"><tt>[20-1]</tt></a>
         <!-- -->
       <hr />
       <br />
@@ -587,33 +587,33 @@ suzani (dot) dejager (at) gmal (dot) com</b><br>
         <a title="Guestbook Start Page" href="index.html"><tt>[Start]</tt></a>
         <a title="Sign The Guestbook" href="0#sign"><tt>[Sign]</tt></a>
     <!--  -->
-        <a href="273#entries"><tt>[293-273]</tt></a>
+        <a href="show/273#entries"><tt>[293-273]</tt></a>
     <!-- -->
-        <a href="252#entries"><tt>[272-252]</tt></a>
+        <a href="show/252#entries"><tt>[272-252]</tt></a>
     <!-- -->
-        <a href="231#entries"><tt>[251-231]</tt></a>
+        <a href="show/231#entries"><tt>[251-231]</tt></a>
     <!-- -->
-        <a href="210#entries"><tt>[230-210]</tt></a>
+        <a href="show/210#entries"><tt>[230-210]</tt></a>
     <!-- -->
-        <a href="189#entries"><tt>[209-189]</tt></a>
+        <a href="show/189#entries"><tt>[209-189]</tt></a>
     <!-- -->
-        <a href="168#entries"><tt>[188-168]</tt></a>
+        <a href="show/168#entries"><tt>[188-168]</tt></a>
     <!-- -->
-        <a href="147#entries"><tt>[167-147]</tt></a>
+        <a href="show/147#entries"><tt>[167-147]</tt></a>
     <!-- -->
-        <a href="126#entries"><tt>[146-126]</tt></a>
+        <a href="show/126#entries"><tt>[146-126]</tt></a>
     <!-- -->
-        <a href="105#entries"><tt>[125-105]</tt></a>
+        <a href="show/105#entries"><tt>[125-105]</tt></a>
     <!-- -->
-        <a href="84#entries"><tt>[104-84]</tt></a>
+        <a href="show/84#entries"><tt>[104-84]</tt></a>
     <!-- -->
-        <a href="63#entries"><tt>[83-63]</tt></a>
+        <a href="show/63#entries"><tt>[83-63]</tt></a>
     <!-- -->
-        <a href="42#entries"><tt>[62-42]</tt></a>
+        <a href="show/42#entries"><tt>[62-42]</tt></a>
     <!-- -->
-        <a href="21#entries"><tt>[41-21]</tt></a>
+        <a href="show/21#entries"><tt>[41-21]</tt></a>
     <!-- -->
-        <a href="1#entries"><tt>[20-1]</tt></a>
+        <a href="show/1#entries"><tt>[20-1]</tt></a>
     <!-- -->
   <hr />
   <br />
