modified:   index.html

--- a/book/index.html
+++ b/book/index.html
@@ -93,7 +93,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry293"
+          <h3><a href="#entry293"
               style="color: #FFCB00;" title="Entry 293">293</a> : yestedl</h3>
         </td>
       </tr>
@@ -115,7 +115,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry292"
+          <h3><a href="#entry292"
               style="color: #FFCB00;" title="Entry 292">292</a> : Hoohoy Banana-Foo</h3>
         </td>
       </tr>
@@ -137,7 +137,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry291"
+          <h3><a href="#entry291"
               style="color: #FFCB00;" title="Entry 291">291</a> : What</h3>
         </td>
       </tr>
@@ -159,7 +159,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry290"
+          <h3><a href="#entry290"
               style="color: #FFCB00;" title="Entry 290">290</a> : Fleegle</h3>
         </td>
       </tr>
@@ -181,7 +181,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry289"
+          <h3><a href="#entry289"
               style="color: #FFCB00;" title="Entry 289">289</a> : gill594 (at) mailbox2000 (dot) com</h3>
         </td>
       </tr>
@@ -203,7 +203,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry288"
+          <h3><a href="#entry288"
               style="color: #FFCB00;" title="Entry 288">288</a> : dori (dot) kebby (at) xoomail (dot) com</h3>
         </td>
       </tr>
@@ -225,7 +225,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry287"
+          <h3><a href="#entry287"
               style="color: #FFCB00;" title="Entry 287">287</a> : 文字化け posteti moji</h3>
         </td>
       </tr>
@@ -247,7 +247,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry286"
+          <h3><a href="#entry286"
               style="color: #FFCB00;" title="Entry 286">286</a> : ICEY</h3>
         </td>
       </tr>
@@ -269,7 +269,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry285"
+          <h3><a href="#entry285"
               style="color: #FFCB00;" title="Entry 285">285</a> : ICEY</h3>
         </td>
       </tr>
@@ -291,7 +291,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry284"
+          <h3><a href="#entry284"
               style="color: #FFCB00;" title="Entry 284">284</a> : Co-DUH!</h3>
         </td>
       </tr>
@@ -313,7 +313,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry283"
+          <h3><a href="#entry283"
               style="color: #FFCB00;" title="Entry 283">283</a> : snark</h3>
         </td>
       </tr>
@@ -335,7 +335,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry282"
+          <h3><a href="#entry282"
               style="color: #FFCB00;" title="Entry 282">282</a> : Brandon</h3>
         </td>
       </tr>
@@ -357,7 +357,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry266"
+          <h3><a href="#entry266"
               style="color: #FFCB00;" title="Entry 266">266</a> : Princess</h3>
         </td>
       </tr>
@@ -379,7 +379,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry265"
+          <h3><a href="#entry265"
               style="color: #FFCB00;" title="Entry 265">265</a> : Monkey</h3>
         </td>
       </tr>
@@ -401,7 +401,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry264"
+          <h3><a href="#entry264"
               style="color: #FFCB00;" title="Entry 264">264</a> : Hello</h3>
         </td>
       </tr>
@@ -423,7 +423,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry263"
+          <h3><a href="#entry263"
               style="color: #FFCB00;" title="Entry 263">263</a> : do not be alarmed</h3>
         </td>
       </tr>
@@ -445,7 +445,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry262"
+          <h3><a href="#entry262"
               style="color: #FFCB00;" title="Entry 262">262</a> : Brandon</h3>
         </td>
       </tr>
@@ -467,7 +467,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry261"
+          <h3><a href="#entry261"
               style="color: #FFCB00;" title="Entry 261">261</a> : james</h3>
         </td>
       </tr>
@@ -489,7 +489,7 @@ tt { font-family: tahoma; font-size: 12px; color: #FFCB00; }
 
       <tr>
         <td>
-          <h3><a href="0#entry260"
+          <h3><a href="#entry260"
               style="color: #FFCB00;" title="Entry 260">260</a> : SuZ</h3>
         </td>
       </tr>
@@ -512,7 +512,7 @@ suzani (dot) dejager (at) gmal (dot) com</b><br>
 
       <tr>
         <td>
-          <h3><a href="0#entry259"
+          <h3><a href="#entry259"
               style="color: #FFCB00;" title="Entry 259">259</a> : cheeto</h3>
         </td>
       </tr>
@@ -534,7 +534,7 @@ suzani (dot) dejager (at) gmal (dot) com</b><br>
 
       <tr>
         <td>
-          <h3><a href="0#entry258"
+          <h3><a href="#entry258"
               style="color: #FFCB00;" title="Entry 258">258</a> : eddie</h3>
         </td>
       </tr>
