modified:   testiv.html

--- a/testiv.html
+++ b/testiv.html
@@ -1,6 +1,6 @@
 <html>
   <body style="overflow:hidden;">
-    <div style="overflow:auto; position:absolute; top: 10%; left:100px; right:0px; bottom:0px">
+    <div style="overflow:auto; position:absolute; top: 10%; left:70%; right:0%; bottom:0%">
 		hey there banana peels!
 <pre>
 #	$OpenBSD: hosts,v 1.12 2009/03/10 00:42:13 deraadt Exp $
